--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,4 +4,6 @@
 //@import '~bootstrap/scss/bootstrap';
 //@import "dashboard.css";
 
-@import "style.min.css";
+@import "coreui-style.css";
+@import "~simple-line-icons/css/simple-line-icons.css";
+@import "~font-awesome/css/font-awesome.css";
