--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,4 +1,4 @@
-{% extends "layout/base.html.twig" %}
+{% extends "layout/_main.html.twig" %}
 {# / https://symfony.com/blog/new-in-symfony-3-4-bootstrap-4-form-theme #}
 
 
