--- a/templates/page1.html.twig
+++ b/templates/page1.html.twig
@@ -1,64 +1,113 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ asset('build/app.css') }}">
-</head>
-<body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+{% extends "layout/_main.html.twig" %}
+{# / https://symfony.com/blog/new-in-symfony-3-4-bootstrap-4-form-theme #}
 
-<header class="app-header navbar">
-    <button class="navbar-toggler mobile-sidebar-toggler d-lg-none mr-auto" type="button">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-</header>
+{% block body %}
 
-<div class="app-body">
-    <div class="sidebar">
-        <nav class="sidebar-nav">
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="main.html"><i class="icon-speedometer"></i> Dashboard <span
-                                class="badge badge-primary">NEW</span></a>
-                </li>
 
-            </ul>
-        </nav>
-        <button class="sidebar-minimizer brand-minimizer" type="button"></button>
+
+    Page 1
+    <div class="card">
+        <div class="card-header">
+            <strong>Block Level Buttons</strong>
+            <small>Add this class
+                <code>.btn-block</code>
+            </small>
+        </div>
+        <div class="card-body">
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-link btn-lg btn-block">Block level button</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <strong>Block Level Buttons</strong>
+            <small>Add this class
+                <code>.btn-block</code>
+            </small>
+        </div>
+        <div class="card-body">
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-link btn-lg btn-block">Block level button</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <strong>Block Level Buttons</strong>
+            <small>Add this class
+                <code>.btn-block</code>
+            </small>
+        </div>
+        <div class="card-body">
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-link btn-lg btn-block">Block level button</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <strong>Block Level Buttons</strong>
+            <small>Add this class
+                <code>.btn-block</code>
+            </small>
+        </div>
+        <div class="card-body">
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-link btn-lg btn-block">Block level button</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <strong>Block Level Buttons</strong>
+            <small>Add this class
+                <code>.btn-block</code>
+            </small>
+        </div>
+        <div class="card-body">
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-link btn-lg btn-block">Block level button</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <strong>Block Level Buttons</strong>
+            <small>Add this class
+                <code>.btn-block</code>
+            </small>
+        </div>
+        <div class="card-body">
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+            <button type="button" class="btn btn-link btn-lg btn-block">Block level button</button>
+        </div>
     </div>
 
-    <!-- Main content -->
-    <main class="main">
-
-        <div class="container-fluid">
-            <div id="ui-view"></div>
-        </div>
-        <!-- /.conainer-fluid -->
-    </main>
-
-</div>
-
-<footer class="app-footer">
-    <span><a href="http://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.</span>
-    <span class="ml-auto">Powered by <a href="http://coreui.io">CoreUI</a></span>
-</footer>
-
-<!-- Bootstrap and necessary plugins -->
-{#<script src="node_modules/jquery/dist/jquery.min.js"></script>#}
-{#<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>#}
-{#<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>#}
-{#<script src="node_modules/pace-progress/pace.min.js"></script>#}
-
-{#<!-- CoreUI main scripts -->#}
-
-{#<script src="js/app.js"></script>#}
-
-<script src="{{ asset('build/app.js') }}"></script>
-
-
-</body>
-</html>
+{% endblock %}
