--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,10 +23,12 @@
 
                                 {% if error %}
                                     <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                        <h4 class="alert-heading">Greška</h4>
+                                         {{ error.messageKey|trans(error.messageData, 'security') }}
+
                                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
-                                        <strong>Greška!</strong> {{ error.messageKey|trans(error.messageData, 'security') }}
                                     </div>
                                 {% endif %}
 
