--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,4 +1,5 @@
 {% extends "security/_sec_layout.html.twig" %}
+{% form_theme form 'form/fields.html.twig' %}
 
 {% block javascripts %}
     <script language="JavaScript" type="javascript">
@@ -8,8 +9,29 @@
     </script>
 {% endblock %}
 
+{% block head %}
+    <style>
+        .input-group {
+            padding-bottom: 1em;
+        }
+
+        .input-group .invalid-feedback {
+            position: absolute;
+            left: 0;
+            top: 2.5em;
+        }
+
+
+    </style>
+{% endblock %}
+
 {% block body %}
     {#<body class="app flex-row align-items-center">#}
+
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+
+
+    {# BUG: addon https://github.com/twbs/bootstrap/issues/23454 #}
     <div class="container" style="margin-top: 100px">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -17,27 +39,35 @@
                     <div class="card-body p-4">
                         <h1>Register</h1>
                         <p class="text-muted">Create your account</p>
-                        <div class="input-group mb-3">
-                            <span class="input-group-addon"><i class="icon-user"></i></span>
-                            <input type="text" class="form-control" placeholder="Username">
-                        </div>
+
 
                         <div class="input-group mb-3">
-                            <span class="input-group-addon">@</span>
-                            <input type="text" class="form-control" placeholder="Email">
+                            <span class="input-group-addon"><i class="icon-lock"></i></span>
+                            {{ form_widget(form.email, {'attr': {'placeholder':'Email'}}) }}
+                            {{ form_errors(form.email) }}
+                        </div>
+
+
+                        <div class="input-group mb-3">
+                            <span class="input-group-addon"><i class="icon-lock"></i></span>
+                            {{ form_widget(form.password1, {'attr': {'placeholder':'Lozinka'}}) }}
+                            {{ form_errors(form.password1) }}
                         </div>
 
                         <div class="input-group mb-3">
                             <span class="input-group-addon"><i class="icon-lock"></i></span>
-                            <input type="password" class="form-control" placeholder="Password">
+                            {{ form_widget(form.password2, {'attr': {'placeholder':'Lozinka ponovo'}}) }}
+                            {{ form_errors(form.password2) }}
                         </div>
 
-                        <div class="input-group mb-4">
-                            <span class="input-group-addon"><i class="icon-lock"></i></span>
-                            <input type="password" class="form-control" placeholder="Repeat password">
-                        </div>
+                        <div>
+                            <div class=" mb-4">
+                                {{ form_widget(form.termsAccepted, {'label': 'Poslovanje'}) }}
+                                {{ form_errors(form.termsAccepted) }}
+                            </div>
 
-                        <button type="button" class="btn btn-block btn-success">Create Account</button>
+                        </div>
+                        <button type="submit" class="btn btn-block btn-success">Create Account</button>
                     </div>
                     <div class="card-footer p-4">
                         <div class="row">
@@ -52,7 +82,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="">
+                        <div class="pull-right">
                             <br>
                             <a role="button" class="btn btn-primary " href="{{ path('login') }}">Login</a>
                         </div>
@@ -61,4 +91,6 @@
             </div>
         </div>
     </div>
+    {{ form_end(form) }}
+
 {% endblock %}
